<?xml version="1.0"?>
<package format="3">
  <name>opencv3</name>
  <version>3.3.1</version>
  <description>OpenCV 3.x</description>

  <maintainer email="vincent.rabaud@gmail.com">Vincent Rabaud</maintainer>
  <license>BSD</license>

  <url type="website">http://opencv.org</url>
  <url type="bugtracker">https://github.com/opencv/opencv/issues</url>
  <url type="repository">https://github.com/opencv/opencv</url>

  <author>The OpenCV team</author>

  <build_depend>ffmpeg</build_depend>
  <build_depend>jasper</build_depend>
  <build_depend>libjpeg</build_depend>
  <build_depend>libpng12-dev</build_depend>
  <build_depend>libtiff-dev</build_depend>
  <build_depend>libv4l-dev</build_depend>
  <build_depend>libvtk-qt</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>python</build_depend>
  <build_depend>python-numpy</build_depend>
  <build_depend>zlib</build_depend>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
